--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@
   }
 
   function preload() {
-    roomIMGS[0] = loadImage('/assets/main-menu.png');
-    roomIMGS[1] = loadImage('/assets/game-background.png');
-    roomIMGS[2] = loadImage('/assets/controls-menu.png');
-    kendrickSheet = loadImage('/assets/kendrick_sheet.png');
-    drakeSheet = loadImage('/assets/drake_sheet.png');
+    roomIMGS[0] = loadImage('main-menu.png');
+    roomIMGS[1] = loadImage('game-background.png');
+    roomIMGS[2] = loadImage('controls-menu.png');
+    kendrickSheet = loadImage('kendrick_sheet.png');
+    drakeSheet = loadImage('drake_sheet.png');
   }
 
   function draw() {
