--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       btn.position((windowWidth- 834)/2 + 66,(windowHeight - 445)/ 2 + i * 48 + 156);
       btn.size(370, 33);
       btn.mousePressed(buttonCallbacks[i]);
-      btn.style('opacity', '0');
+      // btn.style('opacity', '0');
       btn.style('pointer-events', 'auto');
       buttons.push(btn);
     }
@@ -73,7 +73,7 @@
     backBTN.mousePressed(hideControls);
     backBTN.position(327,118);
     backBTN.size(85, 50);
-    backBTN.style('opacity', '0');
+    // backBTN.style('opacity', '0');
     backBTN.style('pointer-events', 'auto');
 
     hideButtons();
