--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     backBTN = createButton('backBTN');
     backBTN.mousePressed(hideControls);
-    backBTN.position(327,118);
+    backBTN.position((windowWidth- 834)/2 + 105,(windowHeight - 445)/ 2 + 25);
     backBTN.size(85, 50);
     backBTN.style('opacity', '0');
     backBTN.style('pointer-events', 'auto');
