--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     backBTN.mousePressed(hideControls);
     backBTN.position((windowWidth - 834) / 2 + 585, (windowHeight - 445) / 2 + 405);
     backBTN.size(160, 30);
-    backBTN.style('opacity', '0');
+    // backBTN.style('opacity', '0');
     backBTN.style('pointer-events', 'auto');
 
 
